Fix game board jumping when a tile is added

--- a/src/assets/styles/layout.css
+++ b/src/assets/styles/layout.css
@@ -1,5 +1,6 @@
 html,
-body, #app {
+body,
+#app {
   width: 100vw;
   height: 100vh;
 }
